# roboinspect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  gen_llms.py  index.md
docs/api/: index.md  index.rst
docs/guide/: cli.md  concepts.md  logging-and-rerun.md  plugins.md  policies-and-embodiments.md  quickstart.md  scoring.md  writing-a-benchmark.md
examples/: quickstart.py
plans/: 0001-foundation-design.md
plugins/robolens-isaacsim/: README.md  pyproject.toml
plugins/robolens-isaacsim/scripts/: boot_proof.py
plugins/robolens-isaacsim/src/robolens_isaacsim/: __init__.py  embodiment.py
plugins/robolens-isaacsim/tests/: test_isaacsim_embodiment.py
src/robolens/: CLAUDE.md  __init__.py  _builtins.py  approver.py  compat.py  controller.py  embodiment.py  errors.py  eval.py  frames.py  log.py  policy.py  registry.py  rollout.py  scene.py  scorer.py  spaces.py  task.py  types.py
src/robolens/logging/: __init__.py  json_log.py
src/robolens/mock/: policies.py
tests/: test_api_snapshot.py  test_compat.py  test_coverage_completion.py  test_ensembling.py  test_examples.py  test_rollout_hardening.py  test_scorers.py  test_types_spaces.py
