[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "robolens-isaacsim"
version = "0.1.0"
description = "IsaacSim / Isaac Lab embodiment adapter for RoboLens — run RoboLens evals against an Isaac Lab simulation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "RoboLens contributors" }]
keywords = ["robotics", "isaac-sim", "isaac-lab", "robolens", "vla", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# NOTE: `isaacsim` / `isaaclab` are intentionally NOT declared here. Isaac Sim and
# Isaac Lab are not installable from PyPI as ordinary wheels — they are provided by
# the user's NVIDIA Omniverse / Isaac Lab environment (and need a GPU). This adapter
# imports them lazily so the package installs, registers, and is discoverable
# (`robolens list embodiments`) on any machine; only `reset()`/`step()` require Isaac.
dependencies = ["robolens>=0.1", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.11", "ruff>=0.6"]

# Entry-point discovery: an installed robolens-isaacsim appears in `robolens list`
# without being imported first. The registry calls this factory by the name `isaacsim`.
[project.entry-points."robolens.embodiments"]
isaacsim = "robolens_isaacsim:isaacsim_embodiment"

[project.urls]
Homepage = "https://github.com/robocurve/robolens-isaacsim"
Repository = "https://github.com/robocurve/robolens-isaacsim"

# In the RoboLens monorepo this resolves the `robolens` dependency to the in-repo
# core package instead of PyPI. Harmless in a standalone checkout (uv ignores a
# workspace source when there is no workspace root).
[tool.uv.sources]
robolens = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/robolens_isaacsim"]

[tool.hatch.build.targets.sdist]
include = ["src/robolens_isaacsim", "tests", "README.md"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

# Isaac Sim / Isaac Lab / torch are not installed in lint/test environments and
# ship no stubs; they are imported lazily inside methods. Don't fail strict on them.
[[tool.mypy.overrides]]
module = ["isaaclab.*", "isaaclab_tasks.*", "gymnasium.*", "torch.*"]
ignore_missing_imports = true
